# century_health_assignment

century-health-assignment/: .gitignore  README.md  pyproject.toml  requirements.txt
century-health-assignment/conf/base/: catalog.yml
century-health-assignment/data/01_raw/: conditions.xlsx  patients.csv  symptoms.csv
century-health-assignment/notebooks/: data_analysis.ipynb  data_inspection.ipynb
century-health-assignment/src/century_health_assignment/: __init__.py  __main__.py  pipeline_registry.py  settings.py
century-health-assignment/src/century_health_assignment/pipelines/data_analysis/: data_analysis.py
century-health-assignment/src/century_health_assignment/pipelines/data_processing/: nodes.py  pipeline.py
century-health-assignment/src/century_health_assignment/tests/: test_split_symptoms.py
century-health-assignment/tests/: test_split_symptoms.py
